<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roamer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro_image_desc">Intro Image!</string>
    <string name="credit_tag">by Anywhere but here! Designs</string>
    <string name="find_roamer">Find Roamer</string>
    <string name="send_message">Send Message</string>
    <string name="check_inbox">Check Inbox</string>
    <string name="set_location">Set Location</string>
    <string name="fill_location">Fill In Location</string>
    <string name="home_title_string">Home Screen</string>
    <string name="title_person_list">People</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="send_message_button">Send</string>
    <string name="check_inbox_button">Inbox</string>
    <string name="anyone_around">Anyone around? I\'m In.</string>
    <string name="out_tonight">I\'ll be out tonight at</string>
    <string name="grab_a_drink">I\'d like to grab a drink, who\'s in?</string>
    <string name="getting_food">Getting some food, join me if you can.  I\'ll  be at</string>
    <string name="title_send_message">Send Message</string>
    <string name="login_execute">Log in!</string>
    <string name="new_user">Create New Profile</string>
    <string name="title_activity_explaination">What is Roamer?</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_create_account_activity2">CreateAccountActivity2</string>
    <string name="tell_about_work">Tell us about your work...</string>
    <string name="title_activity_create_account_activity_pic">CreateAccountActivityPic</string>
    <string name="title_profile_list_activity">Local Roamers</string>
    <string name="title_set_location">Set Location</string>
    <string name="title_inbox">Inbox</string>
    <string name="txtCredits">terms/conditions</string>
    <string name="title_activity_settings_activity2">SettingsActivity2</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_all_events">AllEventsActivity</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="title_activity_test_scroll_tab">TestScrollTabActivity</string>
    <string name="title_activity_test_fixed_tab">TestFixedTabActivity</string>
    <string name="title_activity_total_event">TotalEventActivity</string>
    <string name="title_activity_roamer_profile">RoamerProfileActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_chats_and_requests">ChatsAndRequestsActivity</string>

</resources>