<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/message_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendMessage" >

    <Button
        android:id="@+id/CheckInboxButton"
        android:layout_width="52dp"
        android:layout_height="33dp"
        android:layout_alignLeft="@+id/SendMessageButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_blue"
        android:minHeight="55dp"
        android:text="@string/check_inbox_button"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/BackFromSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="30dp"
        android:background="@style/AppTheme"
        android:contentDescription="@string/credit_tag"
        android:src="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/SendMessageButton"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_above="@+id/checkBox2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:background="@drawable/btn_blue"
        android:minHeight="55dp"
        android:text="@string/send_message_button"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CheckInboxButton"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_marginBottom="14dp"
        android:text="@string/grab_a_drink"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CheckInboxButton"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_marginBottom="16dp"
        android:text="@string/getting_food"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox3"
        android:layout_alignLeft="@+id/BackFromSend"
        android:layout_marginTop="75dp"
        android:text="@string/anyone_around"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBox2"
        android:layout_alignLeft="@+id/checkBox1"
        android:text="@string/out_tonight"
        android:textSize="12sp" />

</RelativeLayout>