<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roamer_backgroun"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreenActivity" >

    <ImageButton
        android:id="@+id/BackIntroButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/back_arrow2"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/ExitButtonMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/BackIntroButton"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:background="@color/transparent"
        android:src="@drawable/exit_icon" />

    <ImageButton
        android:id="@+id/SetLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BackFromSend"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/ExitButtonMain"
        android:contentDescription="@string/app_name"
        
        android:src="@android:drawable/ic_dialog_map" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/findRoamers"
        android:text="@string/find_roamer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/BackFromSend"
        android:text="@string/check_inbox"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SetLocationButton"
        android:layout_centerVertical="true"
        android:text="@string/set_location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/findRoamers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settingsButton"
        android:layout_alignTop="@+id/sendMessageButton"
        android:layout_marginLeft="21dp"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_view" />

    <ImageButton
        android:id="@+id/sendMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ExitButtonMain"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textView1"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendMessageButton"
        android:layout_centerVertical="true"
        android:text="@string/send_message"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/BackFromSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sendMessageButton"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/textView2"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/BackIntroButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="23dp"
        android:background="@color/transparent"
        android:contentDescription="@string/intro_image_desc"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/settings_android_base" />

</RelativeLayout>